fix(social): vertical alignment of share bar

--- a/style.css
+++ b/style.css
@@ -794,7 +794,7 @@ div.evidon-notice-link {
  */
 
  html div.gs-buttons {
-  margin-top: -248px !important;
+  margin-top: -182px !important;
   background: white;
   padding: 8px 5px;
   border-radius: 5px;
